--- a/class-03/test.html
+++ b/class-03/test.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title>Earthquakes Heatmap</title>
-    <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-    <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+    <script src="https://openlayers.org/en/v5.3.0/build/ol.js"></script>
   </head>
   <body>
 
-<!-- This file comes directly from: https://openlayers.org/en/v4.6.5/examples/heatmap-earthquakes.html -->
+<!-- The original file: https://openlayers.org/en/v4.6.5/examples/heatmap-earthquakes.html
+
+    PB changes:   1. Updated to v5.3.0
+-->
+
 
     <div id="map" class="map"></div>
     <form>
