--- a/class-03/leaf.html
+++ b/class-03/leaf.html
@@ -65,11 +65,6 @@ async function waitForQuakes() {
 
 waitForQuakes().then(addQuakes);
 
-function addQuakes(quakes) {
-  console.log('HERE ARE THE quakes 2', quakes)
-  console.log('HERE ARE THE # of quakes 2:', quakes.features.length)
-}
-
 // The "function*" declaration defines a "generator function", which returns a "Generator" object
 //
 //    Ref: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*
@@ -95,6 +90,16 @@ async function f1() {
   console.log(x); // 10
 }
 f1();
+
+// function* -- declaration defines a "generator function", which returns a "Generator" object
+// Generator -- object that conforms to the iterable and iterator protocols
+//    Generator.prototype.next() -- returns value yielded by the "yield" expression
+//    Generator.prototype.return() -- returns value yielded by the "yield" expression and finishes generator
+//    Generator.prototype.throw() -- throws an error to a generator (and finishes the generator, unless it's caught)
+// yield -- used to pause/resume a generator function:  `function*`
+// References:
+//               https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*
+//               https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Generator
 
 //let quakes = function* () {
 //	yield 42;
@@ -132,9 +137,16 @@ f1();
         return L.circleMarker(latlng, geojsonMarkerOptions);
     }
 
+function addQuakes(quakes) {
+  console.log('HERE ARE THE quakes 2', quakes)
+  console.log('HERE ARE THE # of quakes 2:', quakes.features.length)
+
   let quakesLayer = L.geoJson(quakes, { pointToLayer: pointToLayer }).addTo(map);
-  //grandCentralLayer.bindPopup('Grand Central Terminal');
+
   map.fitBounds(quakesLayer.getBounds());
+}
+
+
 </script>
 
 </body>
