--- a/class-03/leaf.html
+++ b/class-03/leaf.html
@@ -32,12 +32,10 @@
 
 <script>
 
-// The "fetch()" method returns a "Promise" that resolves to the request
-//      "Response", whether the request is successful or not.
-//       See: https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API
-
-
-fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_week.geojson')
+// The "fetch()" returns a "Promise" that resolves to the Response to that request,
+//      whether it is successful or not.
+// https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API
+var promise1 = fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_week.geojson')
 //fetch('http://example.com/movies.json')
   .then(function(response) {
     return response.json();
@@ -52,18 +50,20 @@ function getQuakes() {
 }
 
 // The "Body" mixin of the fetch API represents the body of the response/request
-//   Response.json() implies Body.json(), which reads response stream to completion,
-//         and returns a Promise that resolves to the response body text parsed as JSON.
+// Response.json() reads response stream to completion, and returns a Promise
+//         that resolves with the result of parsing the body text as JSON.
 //         Ref: https://developer.mozilla.org/en-US/docs/Web/API/Body
 async function waitForQuakes() {
   var response = await getQuakes();
-	var geojson = response.json();
+	var geojson = response.json();  // Promise that resolves to JSON (pending)
 	console.log('HERE ARE THE quakes #1 response', response)
-	console.log('HERE ARE THE quakes #1 geojson', geojson)  // Promise that resolves to JSON (pending)
-	return geojson;  // return a Promise that resolves to parsed JSON
+	console.log('HERE ARE THE quakes #1 geojson', geojson)
+	console.log('HERE ARE THE quakes #1', geojson.features)
+  console.log('# of earthquakes #1:', geojson.features.length)
+	return quakes.json();
 }
-
-waitForQuakes().then(addQuakes);
+var quakes = waitForQuakes();
+console.log('HERE ARE THE quakes 2', quakes)
 
 // The "function*" declaration defines a "generator function", which returns a "Generator" object
 //
@@ -90,7 +90,6 @@ async function f1() {
   console.log(x); // 10
 }
 f1();
-
 
 //let quakes = function* () {
 //	yield 42;
@@ -128,16 +127,9 @@ f1();
         return L.circleMarker(latlng, geojsonMarkerOptions);
     }
 
-function addQuakes(quakes) {
-  console.log('HERE ARE THE quakes 2', quakes)
-  console.log('HERE ARE THE # of quakes 2:', quakes.features.length)
-
   let quakesLayer = L.geoJson(quakes, { pointToLayer: pointToLayer }).addTo(map);
-
+  //grandCentralLayer.bindPopup('Grand Central Terminal');
   map.fitBounds(quakesLayer.getBounds());
-}
-
-
 </script>
 
 </body>
